Fixing the subtitle not showing

--- a/view/src/styles/windows/MainWindow/_MainWindow.scss
+++ b/view/src/styles/windows/MainWindow/_MainWindow.scss
@@ -3,6 +3,7 @@
   height: 100vh;
   color: white;
   overflow: hidden;
+  position: relative;
 
   #video {
     position: absolute;
@@ -61,20 +62,16 @@
     animation: fadeOut 0.8s;
   }
 
-  video::-webkit-media-text-track-container {
-    position: absolute;
-    bottom: 25px;
-  }
-
   video::cue {
     background-color: transparent;
     text-shadow: 0px 1px 5px black;
     font-weight: 600;
+    position: absolute;
+    bottom: 25px;
   }
 
   .video-sub-up::-webkit-media-text-track-container {
-    position: absolute;
-    bottom: 55px;
+    bottom: 55px!important;
   }
 
   .main-window-show {
